--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "eslint": "^7.11.0",
     "gh-pages": "^4.0.0",
     "jodit-react": "^1.3.39",
     "js-cookie": "^3.0.1",
@@ -17,7 +18,7 @@
     "react-loading-skeleton": "^3.1.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
